# rafin-me-backend

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile_frontend  backend-depl.yaml  blogdb.sql  docker-compose.yaml  ingress.yaml  k8s-deployment.yaml  makefile  manage.py  pyproject.toml  requirements.txt
k8s/: backend-depl.yaml
migrations/versions/: 415052d52a4e_education_and_experience_table_added.py  7a8f3d2e1c5b_add_password_hash_to_users.py  b3c4d5e6f7a8_add_projects_table.py  b7869912064f_image_link_column_added_in_testimonials.py  b98020cc10fb_initial_migration_based_on_current_.py  c4d5e6f7a8b9_add_year_to_projects.py  c54b4e4878c5_add_likes_column_to_blogs_table.py  d00b6fc5a6cf_testimonial_company_field_added.py  d577c4b4e416_education_columns_modified.py  d5e6f7a8b9c4_add_contributions_to_projects.py  db7fa9c1158b_skills_table_added.py  dbca4e0dc1d7_initial_migration.py  fa683945529a_.py
project/server/: __init__.py  config.py  docorators.py  utils.py
project/server/api/: __init__.py
project/server/api/BlogTag/: views.py
project/server/api/Education/: __init__.py  views.py
project/server/api/Experience/: __init__.py  views.py
project/server/api/auth/: __init__.py  schema.py  views.py
project/server/api/blog/: __init__.py  schema.py  views.py
project/server/api/mail/: __init__.py  handler.py  schema.py  views.py
project/server/api/projects/: __init__.py  schema.py  views.py
project/server/api/skill/: __init__.py  schema.py  views.py
project/server/api/social/: __init__.py  schema.py  views.py
project/server/api/testimonial/: __init__.py  schema.py  views.py
project/server/api/uploads/: __init__.py  views.py
project/server/api/user/: __init__.py  schema.py  views.py
project/server/models/: blog.py  models.py
