[tool.poetry]
name = "rafin-blog-site"
version = "0.1.0"
description = ""
authors = ["Rafin000 <marufulislam00000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "3.0.3"
flask-migrate = "4.0.7"
flask-sqlalchemy = "3.1.1"
flask-bcrypt = "1.0.1"
flask-cors = "4.0.1"
psycopg2-binary = "2.9.9"
alembic = "1.13.2"
bcrypt = "4.1.3"
blinker = "1.8.2"
click = "8.1.7"
greenlet = "3.0.3"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
mako = "1.3.5"
markupsafe = "2.1.5"
sqlalchemy = "2.0.31"
typing-extensions = "4.12.2"
werkzeug = "3.0.3"
flask-restx = "1.3.0"
aniso8601 = "9.0.1"
attrs = "23.2.0"
importlib-resources = "6.4.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
pytz = "2024.1"
referencing = "0.35.1"
rpds-py = "0.19.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
