[tool.poetry]
name = "rafin-blog-site"
version = "0.1.0"
description = ""
authors = ["Rafin000 <marufulislam00000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.13.2"
aniso8601 = "9.0.1"
attrs = "23.2.0"
bcrypt = "4.1.3"
blinker = "1.8.2"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
click = "8.1.7"
flask = "3.0.3"
flask-bcrypt = "1.0.1"
flask-cors = "4.0.1"
flask-migrate = "4.0.7"
flask-restx = "1.3.0"
flask-sqlalchemy = "3.1.1"
greenlet = "3.0.3"
idna = "3.7"
importlib-resources = "6.4.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
mako = "1.3.5"
markupsafe = "2.1.5"
psycopg2-binary = "2.9.9"
pytz = "2024.1"
referencing = "0.35.1"
requests = "2.32.3"
rpds-py = "0.19.0"
sqlalchemy = "2.0.31"
typing-extensions = "4.12.2"
urllib3 = "2.2.2"
werkzeug = "3.0.3"
gunicorn = "^23.0.0"
flask-mail = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
